WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306279
WebAuthn Authentication over NFC is broken in Safari Technology Preview 234 (SEED)
https://bugs.webkit.org/show_bug.cgi?id=306279
Summary
WebAuthn Authentication over NFC is broken in Safari Technology Preview 234 (...
pascoe@apple.com
Reported
2026-01-26 09:38:31 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2026-01-26 09:38:45 PST
rdar://168456474
pascoe@apple.com
Comment 2
2026-01-26 10:28:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57268
EWS
Comment 3
2026-01-27 08:35:46 PST
Committed
306280@main
(e140358f9746): <
https://commits.webkit.org/306280@main
> Reviewed commits have been landed. Closing PR #57268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug