Source/WebKit/UIProcess/WebAuthentication/Cocoa/CcidConnection.mm
@@ -28,30 +28,98 @@
 
 #if ENABLE(WEB_AUTHN)
 #import "CcidService.h"
+#import "Logging.h"
 #import <CryptoTokenKit/TKSmartCard.h>
 #import <WebCore/FidoConstants.h>
 #import <wtf/BlockPtr.h>
+#import <wtf/Function.h>
 #import <wtf/StdLibExtras.h>
 #import <wtf/cocoa/VectorCocoa.h>
+
+#define CCID_RELEASE_LOG(fmt, ...) RELEASE_LOG(WebAuthn, "%p - CcidConnection::" fmt, this, ##__VA_ARGS__)
+
+// SPI for TKSmartCardSlot reinsertion
+@interface TKSmartCardSlot (SPI)
+- (BOOL)simulateCardReinsertionWithError:(NSError **)error;
+@end
+
+@interface WKSmartCardObserver : NSObject
+- (instancetype)initWithCard:(TKSmartCard *)card invalidationHandler:(Function<void()>&&)handler;
+@end
+
+@implementation WKSmartCardObserver {
+    RetainPtr<TKSmartCard> _card;
+    Function<void()> _invalidationHandler;
+}
+
+- (instancetype)initWithCard:(TKSmartCard *)card invalidationHandler:(Function<void()>&&)handler
+{
+    if (!(self = [super init]))
+        return nil;
+    _card = card;
+    _invalidationHandler = WTF::move(handler);
+    [_card addObserver:self forKeyPath:@"valid" options:NSKeyValueObservingOptionNew context:nil];
+    return self;
+}
+
+- (void)dealloc
+{
+    [_card removeObserver:self forKeyPath:@"valid"];
+    [super dealloc];
+}
+
+- (void)observeValueForKeyPath:(NSString *)keyPath ofObject:(id)object change:(NSDictionary *)change context:(void *)context
+{
+    if ([keyPath isEqualToString:@"valid"]) {
+        BOOL valid = [[change objectForKey:NSKeyValueChangeNewKey] boolValue];
+        if (!valid) {
+            @synchronized(self) {
+                if (_invalidationHandler) {
+                    callOnMainRunLoop([handler = WTF::move(_invalidationHandler)] () mutable {
+                        handler();
+                    });
+                }
+            }
+        }
+    }
+}
+@end
 
 namespace WebKit {
 using namespace fido;
 
-Ref<CcidConnection> CcidConnection::create(RetainPtr<TKSmartCard>&& smartCard, CcidService& service)
+Ref<CcidConnection> CcidConnection::create(RetainPtr<TKSmartCard>&& smartCard, RetainPtr<TKSmartCardSlot>&& slot, CcidService& service)
 {
-    return adoptRef(*new CcidConnection(WTF::move(smartCard), service));
+    return adoptRef(*new CcidConnection(WTF::move(smartCard), WTF::move(slot), service));
 }
 
-CcidConnection::CcidConnection(RetainPtr<TKSmartCard>&& smartCard, CcidService& service)
+CcidConnection::CcidConnection(RetainPtr<TKSmartCard>&& smartCard, RetainPtr<TKSmartCardSlot>&& slot, CcidService& service)
     : m_smartCard(WTF::move(smartCard))
+    , m_slot(WTF::move(slot))
     , m_service(service)
-    , m_retryTimer(RunLoop::mainSingleton(), "CcidConnection::RetryTimer"_s, this, &CcidConnection::startPolling)
 {
+    CCID_RELEASE_LOG("created, smartCard=%p, slot=%p", m_smartCard.get(), m_slot.get());
+
+    m_observer = adoptNS([[WKSmartCardObserver alloc]
+        initWithCard:m_smartCard.get()
+        invalidationHandler:[weakThis = ThreadSafeWeakPtr { *this }] {
+            if (RefPtr protectedThis = weakThis.get()) {
+                RELEASE_LOG(WebAuthn, "%p - CcidConnection::invalidationHandler fired, m_hasSession=%d, m_sessionPending=%d", protectedThis.get(), protectedThis->m_hasSession, protectedThis->m_sessionPending);
+                protectedThis->m_sessionPending = false;
+                protectedThis->m_pendingRequests.clear();
+                if (protectedThis->m_hasSession) {
+                    [protectedThis->m_smartCard endSession];
+                    protectedThis->m_hasSession = false;
+                }
+            }
+        }]);
+
     startPolling();
 }
 
 CcidConnection::~CcidConnection()
 {
+    CCID_RELEASE_LOG("destroyed, m_hasSession=%d", m_hasSession);
     stop();
 }
 
@@ -69,6 +137,7 @@ void CcidConnection::detectContactless()
         // Only contactless smart cards have uid, check for longer length than apdu status
         if (response.size() > 2)
             protectedThis->m_contactless = true;
+        protectedThis->trySelectFidoApplet();
     });
 }
 
@@ -98,36 +167,90 @@ void CcidConnection::trySelectFidoApplet()
     });
 }
 
-void CcidConnection::transact(Vector<uint8_t>&& data, DataReceivedCallback&& callback) const
+void CcidConnection::transact(Vector<uint8_t>&& data, DataReceivedCallback&& callback)
 {
-    [m_smartCard beginSessionWithReply:makeBlockPtr([this, protectedThis = Ref { *this }, data = WTF::move(data), callback = WTF::move(callback)] (BOOL success, NSError *error) mutable {
-        if (!success)
-            return;
-        [m_smartCard transmitRequest:toNSData(data).get() reply:makeBlockPtr([this, protectedThis = Ref { *this }, callback = WTF::move(callback)](NSData * _Nullable nsResponse, NSError * _Nullable error) mutable {
-            [m_smartCard endSession];
-            callOnMainRunLoop([response = makeVector(nsResponse), callback = WTF::move(callback)] () mutable {
+    CCID_RELEASE_LOG("transact, m_hasSession=%d, m_sessionPending=%d", m_hasSession, m_sessionPending);
+    if (m_sessionPending) {
+        CCID_RELEASE_LOG("session pending, queuing request");
+        m_pendingRequests.append({ WTF::move(data), WTF::move(callback) });
+        return;
+    }
+    if (m_hasSession) {
+        CCID_RELEASE_LOG("reusing session, calling transmitRequest");
+        [m_smartCard transmitRequest:toNSData(data).get() reply:makeBlockPtr([protectedThis = Ref { *this }, callback = WTF::move(callback)](NSData * _Nullable nsResponse, NSError * _Nullable error) mutable {
+            RELEASE_LOG(WebAuthn, "%p - CcidConnection::transmitRequest reply, error=%p", protectedThis.ptr(), error);
+            bool hasError = !!error;
+            callOnMainRunLoop([protectedThis = WTF::move(protectedThis), response = makeVector(nsResponse), callback = WTF::move(callback), hasError] () mutable {
+                if (hasError) {
+                    [protectedThis->m_smartCard endSession];
+                    protectedThis->m_hasSession = false;
+                }
                 callback(WTF::move(response));
             });
         }).get()];
-    }).get()];
+    } else {
+        CCID_RELEASE_LOG("no session, calling beginSessionWithReply");
+        m_sessionPending = true;
+        [m_smartCard beginSessionWithReply:makeBlockPtr([protectedThis = Ref { *this }, data = WTF::move(data), callback = WTF::move(callback)] (BOOL success, NSError *error) mutable {
+            RELEASE_LOG(WebAuthn, "%p - CcidConnection::beginSessionWithReply reply, success=%d, error=%p", protectedThis.ptr(), success, error);
+            if (!success) {
+                callOnMainRunLoop([protectedThis = WTF::move(protectedThis), callback = WTF::move(callback)] () mutable {
+                    protectedThis->m_sessionPending = false;
+                    callback({ });
+                    // Drain pending requests with empty callbacks on failure
+                    while (!protectedThis->m_pendingRequests.isEmpty()) {
+                        auto pending = protectedThis->m_pendingRequests.takeFirst();
+                        pending.second({ });
+                    }
+                });
+                return;
+            }
+            callOnMainRunLoop([protectedThis = WTF::move(protectedThis), data = WTF::move(data), callback = WTF::move(callback)] () mutable {
+                protectedThis->m_sessionPending = false;
+                protectedThis->m_hasSession = true;
+                RELEASE_LOG(WebAuthn, "%p - CcidConnection::session started", protectedThis.ptr());
+                [protectedThis->m_smartCard transmitRequest:toNSData(data).get() reply:makeBlockPtr([protectedThis = WTF::move(protectedThis), callback = WTF::move(callback)](NSData * _Nullable nsResponse, NSError * _Nullable error) mutable {
+                    RELEASE_LOG(WebAuthn, "%p - CcidConnection::transmitRequest reply, error=%p", protectedThis.ptr(), error);
+                    bool hasError = !!error;
+                    callOnMainRunLoop([protectedThis = WTF::move(protectedThis), response = makeVector(nsResponse), callback = WTF::move(callback), hasError] () mutable {
+                        if (hasError) {
+                            [protectedThis->m_smartCard endSession];
+                            protectedThis->m_hasSession = false;
+                        }
+                        callback(WTF::move(response));
+                        protectedThis->processPendingRequests();
+                    });
+                }).get()];
+            });
+        }).get()];
+    }
 }
 
 
-void CcidConnection::stop() const
+void CcidConnection::processPendingRequests()
 {
+    if (m_pendingRequests.isEmpty() || !m_hasSession)
+        return;
+    CCID_RELEASE_LOG("processPendingRequests, count=%zu", m_pendingRequests.size());
+    auto pending = m_pendingRequests.takeFirst();
+    transact(WTF::move(pending.first), WTF::move(pending.second));
 }
 
-// NearField polling is a one shot polling. It halts after tags are detected.
-// Therefore, a restart process is needed to resume polling after error.
-void CcidConnection::restartPolling()
+void CcidConnection::stop()
 {
-    m_retryTimer.startOneShot(1_s); // Magic number to give users enough time for reactions.
+    CCID_RELEASE_LOG("stop, m_hasSession=%d, m_sessionPending=%d", m_hasSession, m_sessionPending);
+    m_sessionPending = false;
+    m_pendingRequests.clear();
+    if (m_hasSession) {
+        CCID_RELEASE_LOG("ending session");
+        [m_smartCard endSession];
+        m_hasSession = false;
+    }
 }
 
 void CcidConnection::startPolling()
 {
     detectContactless();
-    trySelectFidoApplet();
 }
 
 } // namespace WebKit
